Fixup logging an deprecated methods